kubernetes-manifests/archive/open-webui-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openwebui-all
  namespace: ai-inference
spec:
  podSelector:
    matchLabels:
      app: open-webui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
